--- a/assets/base.css
+++ b/assets/base.css
@@ -254,7 +254,6 @@ h5,
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   color: rgb(var(--color-foreground));
-  line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
 }
 
@@ -286,29 +285,20 @@ h5,
 
 h1,
 .h1 {
-  font-size: 28px;
+  font-size: 20px;
   line-height: 1.15;
 }
 h2,
 .h2 {
-  font-size: 24px;
-  line-height: 1.15;
-}
-h3,
-.h3 {
-  font-size: 22px;
-  line-height: 1.15;
-}
-h4,
-.h4 {
-  font-size: 20px;
-  line-height: 1.15;
-}
-h5,
-.h5 {
   font-size: 18px;
   line-height: 1.15;
 }
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
 h6,
 .h6 {
   font-size: 16px;
@@ -318,76 +308,73 @@ p {
   font-size: 14px;
   line-height: 1.25;  
 }
+button {
+  font-family: var(--font-body-family);
+  font-size: 14px;
+  line-height: 1.15;  
+}
 @media (min-width: 768px) and (max-width: 991.98px) {
   h1,
   .h1 {
-    font-size: 40px;
-    line-height: 30px;
-  }
-  h2,
-  .h2 {
-    font-size: 36px;
-    line-height: 1.15;
-  }
-  h3,
-  .h3 {
-    font-size: 32px;
-    line-height: 1.15;
-  }
-  h4,
-  .h4 {
-    font-size: 28px;
-    line-height: 1.15;
-  }
-  h5,
-  .h5 {
     font-size: 24px;
-    line-height: 1.15;
-  }
-  h6,
-  .h6 {
-    font-size: 20px;
-    line-height: 1.15;
-  }
-  p {
-    font-size: 15px;
-    line-height: 1.25;  
-  }
-}
-@media only screen and (min-width: 992px) {
-  h1,
-  .h1 {
-    font-size: 60px;
     line-height: 1.15;
   }
   h2,
   .h2 {
-    font-size: 40px;
+    font-size: 22px;
     line-height: 1.15;
   }
   h3,
-  .h3 {
-    font-size: 36px;
-    line-height: 1.15;
-  }
+  .h3,
   h4,
-  .h4 {
-    font-size: 32px;
-    line-height: 1.15;
-  }
+  .h4,
   h5,
-  .h5 {
-    font-size: 28px;
-    line-height: 1.15;
-  }
+  .h5,
   h6,
   .h6 {
-    font-size: 24px;
+    font-size: 18px;
     line-height: 1.15;
   }
   p {
     font-size: 16px;
     line-height: 1.25;  
+  }
+  button {
+    font-family: var(--font-body-family);
+    font-size: 16px;
+    line-height: 1.15;  
+  }
+}
+@media only screen and (min-width: 992px) {
+  h1,
+  .h1 {
+    font-size: 28px;
+    line-height: 1.15;
+  }
+  h2,
+  .h2 {
+    font-size: 24px;
+    line-height: 1.15;
+  }
+  h3,
+  .h3,
+  h4,
+  .h4,
+  h5,
+  .h5,
+  h6,
+  .h6 {
+    font-size: 20px;
+    line-height: 1.15;
+  }
+  p, span {
+    font-size: 16px;
+    line-height: 1.25;  
+  }
+  button {
+    font-family: var(--font-body-family);
+    font-size: 18px;
+    line-height: 1.15;  
   }
 }
 
@@ -971,7 +958,6 @@ summary::-webkit-details-marker {
   left: 0;
   height: 100%;
   width: 100%;
-  border-radius: 18px;
 }
 
 .media > img {
