Product Page All Functionalities Completed

--- a/assets/base.css
+++ b/assets/base.css
@@ -1216,6 +1216,7 @@ shopify-accelerated-checkout-cart {
 .share-button {
   display: block;
   position: relative;
+  margin: 0 !important
 }
 
 .share-button details {
