--- a/snippets/share-button.liquid
+++ b/snippets/share-button.liquid
@@ -14,7 +14,7 @@
 
 <share-button id="Share-{{ section.id }}" class="share-button quick-add-hidden" {{ block.shopify_attributes }}>
   <button class="share-button__button hidden">
-    <span class="svg-wrapper">{{ 'icon-share.svg' | inline_asset_content }}</span>
+    <span class="svg-wrapper">{{ 'share-new.svg' | inline_asset_content }}</span>
     {{ block.settings.share_label | escape }}
   </button>
   <details id="Details-{{ block.id }}-{{ section.id }}">
