--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -38,6 +38,11 @@
   if target == product and product.price_varies
     assign money_price = 'products.product.price.from_price_html' | t: price: money_price
   endif
+
+  if compare_at_price and compare_at_price > price
+    assign discount_amount = compare_at_price | minus: price
+    assign discount_percentage = discount_amount | times: 100.0 | divided_by: compare_at_price | round
+  endif
 -%}
 
 {%- unless target == null and placeholder == null -%}
@@ -114,7 +119,11 @@
     </div>
     {%- if show_badges -%}
       <span class="badge price__badge-sale color-{{ settings.sale_badge_color_scheme }}">
-        {{ 'products.product.on_sale' | t }}
+        {%- if discount_percentage and discount_percentage > 0 -%}
+          {{ discount_percentage }}% off
+        {%- else -%}
+          {{ 'products.product.on_sale' | t }}
+        {%- endif -%}
       </span>
 
       <span class="badge price__badge-sold-out color-{{ settings.sold_out_badge_color_scheme }}">
