--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -16,11 +16,6 @@ product-info {
 
 /* Dynamic checkout */
 
-.shopify-payment-button__button {
-  font-family: inherit;
-  min-height: 4.6rem;
-}
-
 .shopify-payment-button__button [role='button'].focused {
   outline: 0.2rem solid rgba(var(--color-foreground), 0.5) !important;
   outline-offset: 0.3rem;
@@ -40,11 +35,15 @@ product-info {
 }
 
 .shopify-payment-button__button--unbranded {
-  background-color: rgba(var(--color-button), var(--alpha-button-background));
+  background: linear-gradient(90deg, #FF980C 0%, #FF3668 100%) !important;
   color: rgb(var(--color-button-text));
-  font-size: 1.4rem;
-  line-height: calc(1 + 0.2 / var(--font-body-scale));
-  letter-spacing: 0.07rem;
+  font-weight: 500;
+  font-size: 16px !important;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 15px 0;
+  height: unset;
+  min-height: unset;
 }
 
 .shopify-payment-button__button--unbranded::selection {
@@ -71,8 +70,15 @@ product-info {
 
 /* Product form */
 
-.product-form {
-  display: block;
+.product-media-with-cart .product-form {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 20px 0 0;
+}
+
+.product-form form{
+  width: calc(100% - 13rem);
 }
 
 .product-form__error-message-wrapper:not([hidden]) {
@@ -96,16 +102,34 @@ product-info {
 .product-form__input {
   flex: 0 0 100%;
   padding: 0;
-  margin: 0 0 1.2rem 0;
-  max-width: 44rem;
-  min-width: fit-content;
+  margin: 0 0 20px 0;
   border: none;
+}
+
+.product-form__buttons {
+  display: flex;
+  gap: 24px;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: row-reverse;
 }
 
 .product-form__input .form__label {
   padding-left: 0;
+	color: #000;
+  font-size: 16px;
+	font-weight: 500;
+	line-height: 1.625;
+  margin: 0 0 12px;
 }
-
+.product-form__input .form__label span {
+  padding-left: 0;
+	color: #000;
+  font-size: 16px;
+	font-weight: 500;
+	line-height: 1.625;
+  margin: 0 0 12px;
+}
 .product-form__input .select {
   max-width: 100%;
 }
@@ -115,7 +139,17 @@ product-info {
 }
 
 .product-form__submit {
-  margin-bottom: 1rem;
+  width: 100%;
+  padding: 12px 0px;
+  height: unset;
+  min-height: unset;
+  border: 1px solid #000000;
+  box-shadow: 0px 5px 14px 0px #00000029;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  color: #000000;
+  text-transform: uppercase;
 }
 
 .product-form__submit[aria-disabled='true'] + .shopify-payment-button .shopify-payment-button__button[disabled],
@@ -135,25 +169,9 @@ product-info {
   color: rgb(var(--color-foreground));
 }
 
-.shopify-payment-button__button {
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-}
-
 /* Product info */
-
-.product__info-container > * + * {
-  margin: 1.5rem 0;
-}
-
 .product__info-container iframe {
   max-width: 100%;
-}
-
-.product__info-container .product-form,
-.product__info-container .product__description,
-.product__info-container .icon-with-text {
-  margin: 2.5rem 0;
 }
 
 .product__text {
@@ -172,7 +190,13 @@ a.product__text {
 
 .product__title {
   word-break: break-word;
-  margin-bottom: 1.5rem;
+  margin: 12px 0 0;
+}
+
+.product__title h1{
+	color: #000;
+	font-size: 18px;
+	font-weight: 600;
 }
 
 .product__title > * {
@@ -191,18 +215,15 @@ a.product__text {
   margin-top: 0;
 }
 
+.product-short-description {
+	color: #767474;
+	font-size: 12px;
+	font-weight: 400; 
+  margin: 12px 0 0;
+}
 .product__accordion .accordion__content {
   padding: 0 1rem;
 }
-
-.product .price .badge {
-  margin-bottom: 0.5rem;
-}
-
-.product .price__container {
-  margin-bottom: 0.5rem;
-}
-
 .product .price dl {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -275,10 +296,6 @@ a.product__text {
   margin-bottom: 1.2rem;
 }
 
-.product-form__buttons {
-  max-width: 44rem;
-}
-
 .product--no-media .product__info-container > modal-opener {
   display: block;
   text-align: center;
@@ -322,9 +339,6 @@ a.product__text {
 }
 .product__modal-opener--image .product__media-toggle:hover {
   cursor: zoom-in;
-}
-.product__modal-opener:hover .product__media-icon {
-  border: 0.1rem solid rgba(var(--color-foreground), 0.1);
 }
 .product__media-item > * {
   display: block;
@@ -424,20 +438,21 @@ a.product__text {
   width: 4rem;
 }
 .product-media-modal__toggle {
-  background-color: rgb(var(--color-background));
-  border: 0.1rem solid rgba(var(--color-foreground), 0.1);
-  border-radius: 50%;
-  color: rgba(var(--color-foreground), 0.55);
+  background-color: #FFFFFF;
+  border: 1px solid #0074FA;
+  border-radius: 8px;
+  color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   right: 2rem;
-  padding: 1.2rem;
+  padding: 1rem;
   position: fixed;
   z-index: 2;
   top: 2rem;
-  width: 4rem;
+  width: 3rem;
+  height: 3rem;
 }
 .product-media-modal__content .deferred-media {
   width: 100%;
@@ -770,7 +785,7 @@ a.product__text {
 
 .icon-with-text--horizontal {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   column-gap: 3rem;
   flex-direction: row;
 }
@@ -797,9 +812,11 @@ a.product__text {
 }
 
 .icon-with-text img {
-  height: var(--icon-size);
-  width: var(--icon-size);
-  object-fit: contain;
+	box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.12);
+	width: 52px; height: 52px;
+	background-color: #fff;
+	border-radius: 50%;
+  padding: 10px;
 }
 
 .icon-with-text--vertical img {
@@ -808,6 +825,8 @@ a.product__text {
 
 .icon-with-text--horizontal .h4 {
   padding-top: calc(var(--icon-size) + var(--icon-spacing));
+  font-weight: 400;
+  font-size: 12px;
   text-align: center;
 }
 
@@ -824,7 +843,7 @@ a.product__text {
 
 .icon-with-text--horizontal .icon-with-text__item {
   flex-direction: column;
-  width: 33%;
+  width: 17%;
 }
 
 .icon-with-text--vertical .icon-with-text__item {
@@ -983,38 +1002,74 @@ a.product__text {
   text-transform: capitalize;
 }
 
-/* Responsive */
-@media screen and (min-width: 768px) {
-  .product__info-container {
-    max-width: 60rem;
+/* Share with Rating */
+.share-with-rating {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.share-with-rating .btn-article1 {
+	width: 73px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 2px;
+	flex-shrink: 0;
+	letter-spacing: 0px;
+	background-color: #f5f5f5;
+	padding: 4px 3px;  
+  height: max-content;
+  border: none !important
+}
+.share-with-rating .btn-article-icon {
+  width: 12px; height: 12px;
+	display: flex
+}
+.share-with-rating .btn-article-label {
+  font-size: 12px;
+  font-weight: 700;
+  margin: 0;
+}
+/* Buy Now */
+.shopify-payment-button {
+  width: 100%;
+}
+@media screen and (forced-colors: active) {
+  .recipient-fields > hr {
+    border-top: 0.1rem solid rgb(var(--color-background));
   }
 
-  .product__info-container .price--on-sale .price-item--regular {
-    font-size: 1.6rem;
+  .recipient-checkbox > svg {
+    background-color: inherit;
+    border: 0.1rem solid rgb(var(--color-background));
   }
 
-  .product__info-container > *:first-child {
-    margin-top: 0;
+  .recipient-form > input[type='checkbox']:checked + label .icon-checkmark {
+    border: none;
   }
 }
 
+/* Responsive */
 @media screen and (max-width: 767.98px) {
+  .product {
+    gap: 12px !important;
+  }
   .product__media-wrapper {
     width: 100%
   }
   .product__info-wrapper {
     width: 100%;
   }
-  .product__media-list {
-    margin-left: -2.5rem;
-    margin-bottom: 3rem;
-    width: calc(100% + 4rem);
-  }
-
   .product__media-wrapper slider-component:not(.thumbnail-slider--no-slide) {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
   }
+  .product__media-wrapper .slider-button{
+    width: unset;
+    height: unset;
+  } 
 
   .slider.product__media-list::-webkit-scrollbar {
     height: 0.2rem;
@@ -1030,7 +1085,10 @@ a.product__text {
   }
 
   .product__media-list .product__media-item {
-    width: calc(100% - 3rem - var(--grid-mobile-horizontal-spacing));
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 !important;
   }
 
   .product--mobile-columns .product__media-item {
@@ -1046,9 +1104,185 @@ a.product__text {
     display: block;
     width: 100%;
   }
+  .product-popup-modal__content table {
+    display: block;
+    max-width: fit-content;
+    overflow-x: auto;
+    white-space: nowrap;
+    margin: 0;
+  }
+  .product-media-modal__dialog {
+    background: #000000e0
+  } 
+  .product-media-modal__dialog .global-media-settings,
+  .product-media-modal__dialog .global-media-settings video,
+  .product-media-modal__dialog .global-media-settings model-viewer,
+  .product-media-modal__dialog .global-media-settings iframe,
+  .product-media-modal__dialog .global-media-settings img {
+    border: none;
+    border-radius: 0;
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .product-popup-modal__content-info > * {
+    max-height: 100%;
+  }
+  .product__media-zoom-hover,
+  .product__media-icon--hover {
+    display: flex;
+  }
+  .product-media-container.media-fit-cover {
+    display: flex;
+    align-self: stretch;
+  }
+
+  .product-media-container.media-fit-cover .media {
+    /* allow media img element to scale relative to modal-opener/product-media-container */
+    position: initial;
+  }
+
+  .product__modal-opener {
+    width: 100%;
+  } 
+  .product__modal-opener .product__media-icon {
+    border: 1px solid #0074FA;
+    border-radius: 8px;
+    background: #FFFFFF;  
+  }
+
+  .thumbnail-slider {
+    display: flex;
+    align-items: center;
+  }
+
+  .thumbnail-slider .thumbnail-list.slider {
+    display: flex;
+    padding: 0.5rem;
+    flex: 1;
+    scroll-padding-left: 0.5rem;
+  }
+
+  .thumbnail-list__item.slider__slide {
+    width: calc(33% - 0.6rem);
+  }
+  .product-media-with-cart .product-form {
+    position: fixed;
+    bottom: 0;
+    background: #FFFFFF;
+    box-shadow: -7px 0px 8px 0px #0000002B;
+    margin: 0;
+    z-index: 1; 
+    left: 0;
+    right: 0;   
+  }
+  .product-form form {
+    max-width: var(--page-width);
+    width: calc(100% - 4rem);
+    margin: 0 auto;
+    padding: 16px 0;
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .product-popup-modal__content {
+    padding-right: 1.5rem;
+    margin-top: 10rem;
+    width: 70%;
+    padding: 0 3rem;
+  }
+
+  .product-media-modal__dialog .global-media-settings--no-shadow {
+    overflow: visible !important;
+  }
+  .product--stacked .thumbnail-list {
+    display: none;
+  }
+
+  .thumbnail-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .product__media-wrapper .slider-mobile-gutter .slider-button {
+    display: none;
+  }
+  .product--thumbnail_slider .slider-mobile-gutter .slider-button {
+    display: flex;
+    width: 45px;
+  }
+  .product:not(.product--small) .thumbnail__badge {
+    height: 3rem;
+    width: 3rem;
+  }
+
+  .product:not(.product--small) .thumbnail__badge .icon {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+
+  .product:not(.product--small) .thumbnail__badge .icon-3d-model {
+    width: 1.4rem;
+    height: 1.4rem;
+  }
+  .product-media-with-cart {
+    display: block;
+    position: sticky;
+    top: 3rem;
+    z-index: 2;
+  }
+  .product-media-container {
+    max-width: 100%;
+  }
+
+  .product-media-container:not(.media-type-image) {
+    /* override to use actual media ratio (not poster ratio) for video/models on desktop */
+    --aspect-ratio: var(--ratio);
+  }
+
+  .product-media-container.constrain-height {
+    --viewport-offset: 170px;
+    --constrained-min-height: 500px;
+  }
+
+  .product-media-container.media-fit-cover,
+  .product-media-container.media-fit-cover .product__modal-opener,
+  .product-media-container.media-fit-cover .media {
+    height: 100%;
+  }
+
+  .product-media-container.media-fit-cover .deferred-media__poster img {
+    object-fit: cover;
+    width: 100%;
+  }
+  .product-media-container .product__modal-opener:not(.product__modal-opener--image) {
+    display: none;
+  }
+
+  .product--thumbnail .thumbnail-list {
+    padding-right: var(--media-shadow-horizontal-offset);
+  }
+
+  .product--right .product__info-wrapper {
+    padding: 0 5rem 0 0;
+  }
+
+  .product--right .product__info-wrapper--extra-padding {
+    padding: 0 8rem 0 0;
+  }
+
+  .product--right .product__media-list {
+    margin-bottom: 2rem;
+  }
+
+  .product__media-container .slider-buttons {
+    display: none;
+  }
+
+  .product--right .product__media-wrapper {
+    order: 2;
+  }
+  .product__info-container > *:first-child {
+    margin-top: 0;
+  }
   .product__media-wrapper .desktop-main {
     width: 100%;
   }
@@ -1161,7 +1395,47 @@ a.product__text {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) {
+  .product__title {
+    word-break: break-word;
+    margin: 24px 0 0;
+  }
+  .product__title h1{
+    font-size: 20px;
+  }
+  .product-short-description {
+    font-size: 14px;
+  }
+  .thumbnail-slider .slider--tablet-up {
+    display: flex;
+    flex-direction: column;
+    max-height: 420px; /* adjust */
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+  .thumbnail-slider .thumbnail-list.slider--tablet-up {
+    display: flex;
+    flex-direction: column;
+    scroll-padding-left: 0.5rem;
+  }
+  .thumbnail-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .product--medium .thumbnail-list {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .product--large .thumbnail-list {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .product--thumbnail_slider .thumbnail-slider {
+    display: flex;
+    align-items: center;
+    flex-direction: column;   
+    height: 400px;
+    overflow: visible;   
+  }
   .product-vertical-custom-media {
     display: flex;
     flex-direction: row-reverse;
@@ -1201,212 +1475,15 @@ a.product__text {
   .product-media-modal__toggle {
     right: 5rem;
   }
-}
-
-@media screen and (min-width: 768px) {
-  .product-popup-modal__content {
-    padding-right: 1.5rem;
-    margin-top: 10rem;
-    width: 70%;
-    padding: 0 3rem;
+  .product-form__input {
+    margin: 0 0 24px 0;
   }
-
-  .product-media-modal__dialog .global-media-settings--no-shadow {
-    overflow: visible !important;
+  .icon-with-text--horizontal .h4 {
+    font-size: 14px;
   }
-}
-
-@media screen and (max-width: 767.98px) {
-  .product-popup-modal__content table {
-    display: block;
-    max-width: fit-content;
-    overflow-x: auto;
-    white-space: nowrap;
-    margin: 0;
-  }
-
-  .product-media-modal__dialog .global-media-settings,
-  .product-media-modal__dialog .global-media-settings video,
-  .product-media-modal__dialog .global-media-settings model-viewer,
-  .product-media-modal__dialog .global-media-settings iframe,
-  .product-media-modal__dialog .global-media-settings img {
-    border: none;
-    border-radius: 0;
-  }
-}
-@media screen and (max-width: 767.98px) {
-  .product-popup-modal__content-info > * {
-    max-height: 100%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .product--stacked .thumbnail-list {
-    display: none;
-  }
-
-  .thumbnail-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .thumbnail-list {
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  .product--medium .thumbnail-list {
-    grid-template-columns: repeat(5, 1fr);
-  }
-
-  .product--large .thumbnail-list {
-    grid-template-columns: repeat(6, 1fr);
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .product__media-item {
-    display: flex;
-    align-items: center;
-  }
-
-  .product__modal-opener {
-    width: 100%;
-  }
-
-  .thumbnail-slider {
-    display: flex;
-    align-items: center;
-  }
-
-  .thumbnail-slider .thumbnail-list.slider {
-    display: flex;
-    padding: 0.5rem;
-    flex: 1;
-    scroll-padding-left: 0.5rem;
-  }
-
-  .thumbnail-list__item.slider__slide {
-    width: calc(33% - 0.6rem);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .product__media-wrapper .slider-mobile-gutter .slider-button {
-    display: none;
-  }
-  .product--thumbnail_slider .slider-mobile-gutter .slider-button {
-    display: flex;
-    width: 45px;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .thumbnail-slider .thumbnail-list.slider--tablet-up {
-    display: flex;
-    flex-direction: column;
-    scroll-padding-left: 0.5rem;
-  }
-  .product--thumbnail_slider .thumbnail-slider {
-    display: flex;
-    align-items: center;
-    flex-direction: column;   
-    height: 400px;
-    overflow: visible;   
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .product__media-zoom-hover,
-  .product__media-icon--hover {
-    display: flex;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .product:not(.product--small) .thumbnail__badge {
-    height: 3rem;
-    width: 3rem;
-  }
-
-  .product:not(.product--small) .thumbnail__badge .icon {
-    width: 1.2rem;
-    height: 1.2rem;
-  }
-
-  .product:not(.product--small) .thumbnail__badge .icon-3d-model {
-    width: 1.4rem;
-    height: 1.4rem;
-  }
-}
-
-@media screen and (max-width: 767.98px) {
-  .product-media-container.media-fit-cover {
-    display: flex;
-    align-self: stretch;
-  }
-
-  .product-media-container.media-fit-cover .media {
-    /* allow media img element to scale relative to modal-opener/product-media-container */
-    position: initial;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .product-media-container {
-    max-width: 100%;
-  }
-
-  .product-media-container:not(.media-type-image) {
-    /* override to use actual media ratio (not poster ratio) for video/models on desktop */
-    --aspect-ratio: var(--ratio);
-  }
-
-  .product-media-container.constrain-height {
-    --viewport-offset: 170px;
-    --constrained-min-height: 500px;
-  }
-
-  .product-media-container.media-fit-cover,
-  .product-media-container.media-fit-cover .product__modal-opener,
-  .product-media-container.media-fit-cover .media {
-    height: 100%;
-  }
-
-  .product-media-container.media-fit-cover .deferred-media__poster img {
-    object-fit: cover;
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .product-media-container .product__modal-opener:not(.product__modal-opener--image) {
-    display: none;
-  }
-}
-
-@media screen and (forced-colors: active) {
-  .recipient-fields > hr {
-    border-top: 0.1rem solid rgb(var(--color-background));
-  }
-
-  .recipient-checkbox > svg {
-    background-color: inherit;
-    border: 0.1rem solid rgb(var(--color-background));
-  }
-
-  .recipient-form > input[type='checkbox']:checked + label .icon-checkmark {
-    border: none;
-  }
-}
-
-@media (min-width: 992px) {
-  .thumbnail-slider .slider--tablet-up {
-    display: flex;
-    flex-direction: column;
-    max-height: 420px; /* adjust */
-    overflow-y: auto;
-    overflow-x: hidden;
+  .icon-with-text img {
+    width: 66px; 
+    height: 66px;
   }
 }
 
@@ -1418,37 +1495,3 @@ a.product__text {
     overflow-y: hidden;
   }
 }
-@media screen and (min-width: 768px) {
-  .product-media-with-cart {
-    display: block;
-    position: sticky;
-    top: 3rem;
-    z-index: 2;
-  }
-
-  .product--thumbnail .thumbnail-list {
-    padding-right: var(--media-shadow-horizontal-offset);
-  }
-
-  .product--right .product__info-wrapper {
-    padding: 0 5rem 0 0;
-  }
-
-  .product--right .product__info-wrapper--extra-padding {
-    padding: 0 8rem 0 0;
-  }
-
-  .product--right .product__media-list {
-    margin-bottom: 2rem;
-  }
-
-  .product__media-container .slider-buttons {
-    display: none;
-  }
-
-  .product--right .product__media-wrapper {
-    order: 2;
-  }
-}
-
-
