--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -557,11 +557,12 @@
               {{- 'products.product.sold_out' | t -}}
             </span>
           {%- elsif card_product.compare_at_price > card_product.price and card_product.available -%}
-            <span
-              id="Badge-{{ section_id }}-{{ card_product.id }}"
-              class="badge badge--bottom-left color-{{ settings.sale_badge_color_scheme }}"
-            >
-              {{- 'products.product.on_sale' | t -}}
+            <span class="badge price__badge-sale color-{{ settings.sale_badge_color_scheme }}">
+              {%- if discount_percentage and discount_percentage > 0 -%}
+                {{ discount_percentage }}% off
+              {%- else -%}
+                {{ 'products.product.on_sale' | t }}
+              {%- endif -%}
             </span>
           {%- endif -%}
         </div>
